- [#5235] Explicitly provide the configuration check namespaces
- [#5389] Crash when confirming/canceling an event with time-slots
- [#5416] Relax the static_info_tables version dependencies
- [#5402] Add link to bug tracker
- [#5400] Allow more than 22 pages in the flexforms
- [#5321] Update .htaccess to be Apache 2.4 compatible

Cleanup:
- [#5584] Rename tx_seminars_Mapper_TimeSlot to Tx_Seminars_Mapper_TimeSlot
- [#5580] Rename tx_seminars_Mapper_Registration to Tx_Seminars_Mapper_Registration
- [#5561] Rename tx_seminars_Interface_Titled to Tx_Seminars_Interface_Titled
- [#5560] Rename tx_seminars_Interface_Hook_Registration to Tx_Seminars_Interface_Hook_Registration
- [#5559] Rename tx_seminars_Interface_Hook_EventSingleView to Tx_Seminars_Interface_Hook_EventSingleView
- [#5558] Rename tx_seminars_Interface_Hook_EventListView to Tx_Seminars_Interface_Hook_EventListView
- [#5578] Rename tx_seminars_Model_Place to Tx_Seminars_Model_Place
- [#5548] Rename tx_seminars_FrontEnd_Editor to Tx_Seminars_FrontEnd_Editor
- [#5557] Rename tx_seminars_Interface_Hook_BackEndModule to Tx_Seminars_Interface_Hook_BackEndModule
- [#5556] Rename tx_seminars_FrontEnd_WizardIcon to Tx_Seminars_FrontEnd_WizardIcon
- [#5555] Rename tx_seminars_FrontEnd_SelectorWidget to Tx_Seminars_FrontEnd_SelectorWidget
- [#5554] Rename tx_seminars_FrontEnd_RequirementsList to Tx_Seminars_FrontEnd_RequirementsList
- [#5553] Rename tx_seminars_FrontEnd_RegistrationsList to Tx_Seminars_FrontEnd_RegistrationsList
- [#5552] Rename tx_seminars_FrontEnd_RegistrationForm to Tx_Seminars_FrontEnd_RegistrationForm
- [#5551] Rename tx_seminars_FrontEnd_PublishEvent to Tx_Seminars_FrontEnd_PublishEvent
- [#5550] Rename tx_seminars_FrontEnd_EventHeadline to Tx_Seminars_FrontEnd_EventHeadline
- [#5549] Rename tx_seminars_FrontEnd_EventEditor to Tx_Seminars_FrontEnd_EventEditor
- [#5577] Rename tx_seminars_OldModel_Abstract to Tx_Seminars_OldModel_Abstract